[FEATURE] CM-XX: implement reset password feature
