# src/main/java/com/nexym/clinic/infra/user/mapper/UserEntityMapper.java
@@ -1,7 +1,9 @@
 package com.nexym.clinic.infra.user.mapper;
 
 import com.nexym.clinic.domain.doctor.model.Doctor;
+import com.nexym.clinic.domain.user.model.ResetPassword;
 import com.nexym.clinic.domain.user.model.User;
+import com.nexym.clinic.infra.user.entity.ResetPasswordEntity;
 import com.nexym.clinic.infra.user.entity.UserEntity;
 import org.mapstruct.*;
 
@@ -14,18 +16,25 @@ import java.util.List;
 )
 public interface UserEntityMapper {
 
+    @Mapping(target = "id", source = "reset.id")
     @Mapping(target = "userId", source = "id")
+    @Mapping(target = "expiryDate", source = "reset.expiryDate")
+    @Mapping(target = "token", source = "reset.token")
+    ResetPassword map(UserEntity userEntity);
+
+    @Mapping(target = "creationDate", ignore = true)
+    @Mapping(target = "modifiedDate", ignore = true)
+    @Mapping(target = "user.id", source = "userId")
+    ResetPasswordEntity map(ResetPassword resetPassword);
+
+    @Mapping(target = "userId", source = "id")
+    @Mapping(target = "reset", source = "userEntity", conditionExpression = "java(userEntity.getReset() != null)")
     User mapToModel(UserEntity userEntity);
 
     @Mapping(target = "id", source = "userId")
     @Mapping(target = "creationDate", ignore = true)
     @Mapping(target = "modifiedDate", ignore = true)
     UserEntity mapToEntity(User userModel);
-
-    @Mapping(target = "id", source = "userId")
-    @Mapping(target = "creationDate", ignore = true)
-    @Mapping(target = "modifiedDate", ignore = true)
-    UserEntity mapToUser(Doctor doctor);
 
     List<User> mapToModelList(List<UserEntity> userList);
 }
