# src/main/resources/spec/openapi.yaml
@@ -423,6 +423,50 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /api/v1/forgot-password:
+    post:
+      summary: Forgot password
+      operationId: forgotPassword
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordForgotRequest'
+      responses:
+        '204':
+          description: Email has been sent successfully
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /api/v1/reset-password:
+    post:
+      summary: Reset user password
+      operationId: resetPassword
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordResetRequest'
+      responses:
+        '204':
+          description: Password successfully reset
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /api/v1/authenticate:
     post:
       summary: Authenticate an existing user
@@ -676,6 +720,24 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/User"
+    PasswordForgotRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          description: 'Email address of the user'
+          example: 'john.doe@mail.com'
+    PasswordResetRequest:
+        type: object
+        properties:
+            token:
+              type: string
+              description: 'Token of the user'
+              example: '1cedd21a-0f78-11ee-be56-0242ac120002'
+            password:
+              type: string
+              description: 'Password of the user'
+              example: 'R1c&edd21D'
     DoctorRequest:
       type: object
       properties:
